# ImageAnalysis

./: CMakeLists.txt  Config.h.in  algo.h  annotations.cpp  annotations.h  annotations.proto  build.sh  controller.h  data_model.cpp  data_model.h  data_model_protobuf.h  data_vector.h  detection_results_v2.proto  eval_fast_rcnn_resnet101.h  image_label.cpp  image_label.h  main.cpp  window.cpp  window.h
test/: algoTest.cpp  test.cpp
